--- a/website/final_report.html
+++ b/website/final_report.html
@@ -55,12 +55,12 @@
     Case 1: The edge connects two vertices of valence 6. We calculate weighted position of the new vertex
     according to the following graph with a, b, c, and d representing different weights
 </p>
-    <img src="images/butterfly_scheme_1.png" align="middle" width="400px"/>
+    <img src="images/butterfly_scheme_2.png" align="middle" width="400px"/>
 <p>
     Case 2: The edge connects a K-vertex (K != 6) and a 6-vertex. We calculate weighted position of the new vertex
     according to the following graph with s0 to sj representing different weights depending on the value of K.
 </p>
-    <img src="images/butterfly_scheme_2.png" align="middle" width="400px"/>
+    <img src="images/butterfly_scheme_1.png" align="middle" width="400px"/>
 <p>
     Case 3: The edge connects two extraordinary vertices. In this case, we take the average of the values computed using the 
     method shown on case 2.
@@ -110,6 +110,9 @@
 <h3>
     Subdivision
 </h3>
+<h3>
+    Example 1
+</h3>
 <h4>
     Modified Butterfly Subdivision Scheme
 </h4>
@@ -121,24 +124,12 @@
                 <figcaption align="middle">Butterfly Level 1 Cube</figcaption>
             </td>
             <td>
-                <img src="images/butterfly_1_teapot.png" align="middle" width="400px"/>
-                <figcaption align="middle">Butterfly Level 1 Teapot</figcaption>
-            </td>
-            <td>
                 <img src="images/butterfly_2_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Butterfly Level 2 Cube</figcaption>
             </td>
             <td>
-                <img src="images/butterfly_2_teapot.png" align="middle" width="400px"/>
-                <figcaption align="middle">Butterfly Level 2 Teapot</figcaption>
-            </td>
-            <td>
                 <img src="images/butterfly_5_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Butterfly Level 5 Cube</figcaption>
-            </td>
-            <td>
-                <img src="images/butterfly_1_teapot.png" align="middle" width="400px"/>
-                <figcaption align="middle">Butterfly Level 5 Teapot</figcaption>
             </td>
             </tr>
         </table>
@@ -154,24 +145,12 @@
                 <figcaption align="middle">Sqrt3 Level 1 Cube</figcaption>
             </td>
             <td>
-                <img src="images/sqrt3_1_teapot.png" align="middle" width="400px"/>
-                <figcaption align="middle">Sqrt3 Level 1 Teapot</figcaption>
-            </td>
-            <td>
                 <img src="images/sqrt3_2_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Sqrt3 Level 2 Cube</figcaption>
             </td>
             <td>
-                <img src="images/sqrt3_2_teapot.png" align="middle" width="400px"/>
-                <figcaption align="middle">Sqrt3 Level 2 Teapot</figcaption>
-            </td>
-            <td>
                 <img src="images/sqrt3_5_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Sqrt3 Level 5 Cube</figcaption>
-            </td>
-            <td>
-                <img src="images/sqrt3_5_teapot.png" align="middle" width="400px"/>
-                <figcaption align="middle">Sqrt3 Level 5 Teapot</figcaption>
             </td>
             </tr>
         </table>
@@ -187,20 +166,74 @@
                 <figcaption align="middle">Loop Level 1 Cube</figcaption>
             </td>
             <td>
-                <img src="images/loop_1_teapot.png" align="middle" width="400px"/>
-                <figcaption align="middle">Loop Level 1 Teapot</figcaption>
-            </td>
-            <td>
                 <img src="images/loop_2_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Loop Level 2 Cube</figcaption>
             </td>
             <td>
-                <img src="images/loop_2_teapot.png" align="middle" width="400px"/>
-                <figcaption align="middle">Loop Level 2 Teapot</figcaption>
-            </td>
-            <td>
                 <img src="images/loop_5_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Loop Level 5 Cube</figcaption>
+            </td>
+            </tr>
+        </table>
+    </div>
+<h3>
+    Example 2
+</h3>
+<h4>
+    Modified Butterfly Subdivision Scheme
+</h4>
+    <div align="middle">
+        <table>
+            <tr align="middle">
+            <td>
+                <img src="images/butterfly_1_teapot.png" align="middle" width="400px"/>
+                <figcaption align="middle">Butterfly Level 1 Teapot</figcaption>
+            </td>
+            <td>
+                <img src="images/butterfly_2_teapot.png" align="middle" width="400px"/>
+                <figcaption align="middle">Butterfly Level 2 Teapot</figcaption>
+            </td>
+            <td>
+                <img src="images/butterfly_5_teapot.png" align="middle" width="400px"/>
+                <figcaption align="middle">Butterfly Level 5 Teapot</figcaption>
+            </td>
+            </tr>
+        </table>
+    </div>
+<h4>
+    Sqrt3-Subdivision Scheme
+</h4>
+    <div align="middle">
+        <table>
+            <tr align="middle">
+            <td>
+                <img src="images/sqrt3_1_teapot.png" align="middle" width="400px"/>
+                <figcaption align="middle">Sqrt3 Level 1 Teapot</figcaption>
+            </td>
+            <td>
+                <img src="images/sqrt3_2_teapot.png" align="middle" width="400px"/>
+                <figcaption align="middle">Sqrt3 Level 2 Teapot</figcaption>
+            </td>
+            <td>
+                <img src="images/sqrt3_5_teapot.png" align="middle" width="400px"/>
+                <figcaption align="middle">Sqrt3 Level 5 Teapot</figcaption>
+            </td>
+            </tr>
+        </table>
+    </div>
+<h4>
+    Loop Subdivision
+</h4>
+    <div align="middle">
+        <table>
+            <tr align="middle">
+            <td>
+                <img src="images/loop_1_teapot.png" align="middle" width="400px"/>
+                <figcaption align="middle">Loop Level 1 Teapot</figcaption>
+            </td>
+            <td>
+                <img src="images/loop_2_teapot.png" align="middle" width="400px"/>
+                <figcaption align="middle">Loop Level 2 Teapot</figcaption>
             </td>
             <td>
                 <img src="images/loop_5_teapot.png" align="middle" width="400px"/>
@@ -209,6 +242,10 @@
             </tr>
         </table>
     </div>
+<p>
+    As the images shown, all three schemes have the effect of smooth and finer. The Sqrt3 scheme forms fewer triangles compare to 
+    other schemes at the level goes up. The modified butterfly scheme produce images with more sharpness.
+</p>
 <h4>
     Video
 </h4>
