--- a/website/final_report.html
+++ b/website/final_report.html
@@ -386,7 +386,7 @@
 <p>
     • Angel Tu: Modified Butterfly Subdivision Scheme, websites, and slides. <br>
     • Jiacheng Song: <br>
-    • Youxun Liu: <br>
+    • Youxun Liu:edge collapse, vertex shift, GUI remeshing, and slides. <br>
     • Zhen Fu: edge collapse, vertex shift, remeshing, websites, and slides.<br>
 </p>
 
