--- a/website/final_report.html
+++ b/website/final_report.html
@@ -366,7 +366,7 @@
 </h4>
 <div class="video-container">
     <video width="640" height="360" controls>
-        <source src="images/remeshing_progress.mp4" type="video/mp4">
+        <source src="images/remeshingdone.mp4" type="video/mp4">
     </video>
 </div>    
   
