--- a/website/final_report.html
+++ b/website/final_report.html
@@ -385,7 +385,7 @@
 </h2>
 <p>
     • Angel Tu: Modified Butterfly Subdivision Scheme, websites, and slides. <br>
-    • Jiacheng Song: <br>
+    • Jiacheng Song: Sqrt3 Subdivision Scheme with adaptive refinement<br>
     • Youxun Liu:edge collapse, vertex shift, GUI remeshing, and slides. <br>
     • Zhen Fu: edge collapse, vertex shift, remeshing, websites, and slides.<br>
 </p>
